Fix alignment for dark theme too

--- a/static/dark/kawata.css
+++ b/static/dark/kawata.css
@@ -150,7 +150,7 @@ p {
     padding-top: 1.1rem;
 }
 
-.buttons {
+.button1 {
     margin: 10%;
     text-align: center;
 }
